--- a/app/src/main/res/layout/toobar.xml
+++ b/app/src/main/res/layout/toobar.xml
@@ -6,9 +6,8 @@
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbarMain"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme" />
+        android:theme="@style/Toolbar" />
 
 </FrameLayout>
