Salvando e atualizando dados do usuário

--- a/app/src/main/res/layout/activity_configuracoes.xml
+++ b/app/src/main/res/layout/activity_configuracoes.xml
@@ -57,7 +57,7 @@
             android:text="Nome do Usuário" />
 
         <ImageView
-            android:id="@+id/imageView2"
+            android:id="@+id/updateNome"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
