--- a/app/src/main/res/layout/fragment_contato.xml
+++ b/app/src/main/res/layout/fragment_contato.xml
@@ -5,10 +5,11 @@
     android:layout_height="match_parent"
     tools:context=".fragments.ContatoFragment">
 
-    <TextView
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/listaContatos"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="Contatos" />
+        android:scrollbars="vertical" />
 
 </FrameLayout>
