Exibindo nome e foto do contato no Chat

--- a/app/src/main/res/layout/adapter_contatos.xml
+++ b/app/src/main/res/layout/adapter_contatos.xml
@@ -3,37 +3,48 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:padding="5dp">
-
-
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/adapter_foto"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:src="@drawable/padrao" />
+    android:orientation="vertical"
+    android:paddingLeft="16dp"
+    android:paddingTop="6dp"
+    android:paddingRight="16dp"
+    android:paddingBottom="6dp">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center_vertical"
-        android:orientation="vertical"
-        android:padding="5dp">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/adapter_nome"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Nome"
-            android:textColor="@android:color/black"
-            android:textSize="18sp"
-            android:textStyle="bold" />
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/adapter_foto"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/padrao" />
 
-        <TextView
-            android:id="@+id/adapter_email"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="E-mail" />
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:orientation="vertical"
+            android:padding="5dp">
+
+            <TextView
+                android:id="@+id/adapter_nome"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Nome"
+                android:textColor="@android:color/black"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/adapter_email"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="E-mail" />
+        </LinearLayout>
+
     </LinearLayout>
+
+    <include layout="@layout/divisor" />
 
 </LinearLayout>
