--- a/app/src/main/res/layout/content_chat.xml
+++ b/app/src/main/res/layout/content_chat.xml
@@ -39,7 +39,7 @@
             android:paddingRight="16dp">
 
             <EditText
-                android:id="@+id/editText"
+                android:id="@+id/editMensagem"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -56,11 +56,12 @@
         </LinearLayout>
 
         <android.support.design.widget.FloatingActionButton
-            android:id="@+id/floatingActionButton2"
+            android:id="@+id/fabEnviar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/colorPrimary"
             android:clickable="true"
+            android:onClick="enviarMensagem"
             android:src="@drawable/ic_send_branco_24dp"
             app:fabSize="mini" />
     </LinearLayout>
