Adapter para mensagens

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#ff9800</color>
 
     <color name="cinzaClaro">#eeeeee</color>
+    <color name="balaoRemetente">#f2cca9</color>
 </resources>
