--- a/app/src/main/res/layout/content_chat.xml
+++ b/app/src/main/res/layout/content_chat.xml
@@ -11,6 +11,7 @@
     tools:showIn="@layout/activity_chat">
 
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/reciclerMensagem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1" />
