--- a/app/src/main/res/layout/toobar.xml
+++ b/app/src/main/res/layout/toobar.xml
@@ -10,4 +10,9 @@
         android:background="?attr/colorPrimary"
         android:theme="@style/Toolbar" />
 
+    <com.miguelcatalan.materialsearchview.MaterialSearchView
+        android:id="@+id/search_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
 </FrameLayout>
