--- a/app/src/main/res/layout/content_grupo.xml
+++ b/app/src/main/res/layout/content_grupo.xml
@@ -17,5 +17,5 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rwMembros"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent" />
 </LinearLayout>
