--- a/app/src/main/res/layout/adapter_grupo_selecionado.xml
+++ b/app/src/main/res/layout/adapter_grupo_selecionado.xml
@@ -8,6 +8,7 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:orientation="vertical"
         android:padding="5dp">
 
@@ -15,17 +16,17 @@
             android:id="@+id/foto_membro_selecionado"
             android:layout_width="50dp"
             android:layout_height="50dp"
+            android:layout_gravity="center"
             android:src="@drawable/padrao" />
 
         <TextView
             android:id="@+id/nome_membro_selecionado"
-            android:layout_width="match_parent"
+            android:layout_width="90dp"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="Nome"
             android:textColor="@android:color/black"
-            android:textSize="14sp"
-            android:textStyle="bold" />
+            android:textSize="12sp" />
 
     </LinearLayout>
 </LinearLayout>
