--- a/app/src/main/res/layout/activity_cadastro_grupo.xml
+++ b/app/src/main/res/layout/activity_cadastro_grupo.xml
@@ -27,7 +27,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
+        app:fabSize="normal"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+        app:srcCompat="@drawable/ic_check_branco_24dp" />
 
 </android.support.design.widget.CoordinatorLayout>
