--- a/app/src/main/res/layout/adapter_msg_remetente.xml
+++ b/app/src/main/res/layout/adapter_msg_remetente.xml
@@ -12,6 +12,13 @@
         android:backgroundTint="@color/balaoRemetente"
         android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/nomeExibicao"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Usuario"
+            android:textStyle="bold" />
+
         <ImageView
             android:id="@+id/imageMsgFoto"
             android:layout_width="wrap_content"
